Fix title alignment in mobile size

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -90,6 +90,5 @@
 
   .titleContainer {
     margin-bottom: 20px;
-    text-align: center;
   }
 }
